# ROB2001-HRI-Demo

./: .gitignore  README.md  demo_cli.py  demo_cli_v2.py  demo_gui.py  demo_gui_v2.py  demo_ros2.py  docker-compose.yml  requirements.txt
ros2_docker/: .dockerignore  Dockerfile  entrypoint.sh  rviz_config.rviz
ros2_docker/ros2_ws/src/hri_bridge/: CMakeLists.txt  package.xml
ros2_docker/ros2_ws/src/hri_bridge/config/: README.md
ros2_docker/ros2_ws/src/hri_bridge/launch/: sim_nav_bridge.launch.py
ros2_docker/ros2_ws/src/hri_bridge/scripts/: robot_status_node.py
src/: __init__.py  audio.py  commands.py  config.py  detection.py  emotion.py  gestures.py  navigation.py  ros_bridge.py  tts.py  vision.py  vlm.py  wakeword.py
tests/: test_audio.py  test_commands.py  test_config.py  test_detection.py  test_emotion.py  test_gestures.py  test_navigation.py  test_ros_bridge.py  test_tts.py  test_vision.py  test_vlm.py
vibes_demo/: PandaQuest_Learning_Guide.docx  PandaQuest_Slides.pptx  README.md  app.js  index.html  styles.css
